# bscript

./: README.md  pyproject.toml
docs/: details.md
examples/: have_lunch.py
examples/irsim/: main.py
src/bscript/: __init__.py  bscript_context.py  bts_context.py  context_impl.py  examples.py  fsm_impl.py  handler.py  statemachine.py  task_context.py  task_impl.py  tracer.py  utils.py
src/btscript/: bts_context.py  fsm_context.py  task_context.py
tests/: test_fsm.py  test_task.py
